MUDA-7: Fix application label overflow (#874)
* Render app elements as flex layout

* Limit app description title to one line

* Suppress line breaks on app label render in appstore

--- a/src/apps/apploader/style/app.scss
+++ b/src/apps/apploader/style/app.scss
@@ -147,15 +147,23 @@
 
 #apploader .app-description {
 	display: flex;
-	align-items: center;
+	flex-direction: column;
+	justify-content: center;
+	align-items: flex-start;
 	height: 110px;
 }
 
 #apploader .app-description h4 {
 	display: flex;
 	align-items: center;
-	overflow: hidden;
+	max-width: 100%;
 	max-height: 20px;
+
+	.title {
+		overflow-x: hidden;
+		text-overflow: ellipsis;
+		white-space: nowrap;
+	}
 
 	i {
 		display: none;
@@ -229,6 +237,8 @@
 }
 
 #apploader .app-list {
+	display: flex;
+	flex-wrap: wrap;
 	margin-bottom: 35px;
 }
 
